--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=yama331
+#데이터베이스 설정
+spring.application.name=togyebu
+spring.datasource.url=jdbc:mysql://localhost:3306/togyebu
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
