--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Spring security 설정
+spring.security.user.name=yama331
+spring.security.user.password=1234
+spring.security.user.roles=ADMIN   
